--- a/package.json
+++ b/package.json
@@ -8,36 +8,36 @@
     "clean": "rm -rf ./.cache && rm -rf ./dist && mkdir dist && touch ./dist/.gitkeep",
     "test": "echo \"Error: no test specified\" && exit 1",
     "copy-images": "cp -R ./tiles ./dist/ && cp -R ./test/fixtures ./dist/ && cp ./src/images/thumbnail.png ./dist/",
-    "start": "npm run copy-images && parcel src/index.html",
+    "start": "npm run copy-images && parcel src/index.html --no-source-maps",
     "build": "npm run copy-images && parcel build src/index.html"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@babel/plugin-proposal-class-properties": "7.1.0",
-    "@babel/preset-env": "7.2.0",
+    "@babel/plugin-proposal-class-properties": "7.4.0",
+    "@babel/preset-env": "7.4.3",
     "@babel/preset-react": "7.0.0",
-    "downshift": "3.1.5",
-    "leaflet": "1.3.4",
+    "downshift": "3.2.8",
+    "leaflet": "1.4.0",
     "leaflet-rastercoords": "1.0.3",
-    "nyc-subway-icons": "git+https://github.com/louh/nyc-subway-icons.git",
-    "parcel-bundler": "1.10.3",
-    "react": "16.6.3",
-    "react-dom": "16.6.3",
-    "react-router-dom": "4.3.1",
-    "sanitize-html": "1.19.3"
+    "mta-subway-bullets": "0.4.0",
+    "parcel-bundler": "1.12.3",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
+    "react-router-dom": "5.0.0",
+    "sanitize-html": "1.20.0"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-object-rest-spread": "7.2.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.4.3",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
-    "eslint": "5.9.0",
+    "eslint": "5.16.0",
     "eslint-config-standard": "12.0.0",
     "eslint-config-standard-react": "7.0.2",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-node": "8.0.0",
-    "eslint-plugin-promise": "4.0.1",
-    "eslint-plugin-react": "7.11.1",
+    "eslint-plugin-import": "2.17.2",
+    "eslint-plugin-node": "8.0.1",
+    "eslint-plugin-promise": "4.1.1",
+    "eslint-plugin-react": "7.12.4",
     "eslint-plugin-standard": "4.0.0"
   },
   "babel": {
